[package]
name = "tcpChat"
version = "1.0.0"
edition = "2021"
description = "Simple chatroom over tcp/ip"
license = "MIT"
authors = ["itsgerliz"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"

[profile.release-stripped]
inherits = "release"
strip = true
